kubernetes/catalog/draw-io/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: draw-io
  namespace: draw-io
  labels:
    app.kubernetes.io/name: draw-io
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`draw-io.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: draw-io
          port: 8080
  tls:
    secretName: int-rlservers-com-tls
